feat: Create API query message list of the user from MongoDB
